--- a/content/2021-05-18.idulfitri1442h.md
+++ b/content/2021-05-18.idulfitri1442h.md
@@ -6,27 +6,27 @@ slug: idulfitri-1442h
 ---
 
 
-Pagi itu mama bangunin aku. Baru beberapa kedipan mata ini berusaha terjaga, mama bilang "ndang salim sek!" (cepet cium tangan dulu!). Seketika kudengar suara sandal yang bergesek di lantai lorong rumah. Saat itulah kutahu kalau mak'e baru sampai rumah. Beranjaklah diriku, bergegas membuka pintu samping rumah yang memisahkan ruang keluarga dengan lorong itu.
+Pagi itu mama bangunin aku. Baru beberapa kedipan mata ini berusaha terjaga, mama bilang "ndang salim sek!" (cepet cium tangan dulu!). Kemudian kudengar suara sandal yang bergesek di lantai lorong rumah. Saat itulah kutahu kalau mak'e baru sampai rumah. Beranjaklah diriku, bergegas membuka pintu samping rumah yang memisahkan ruang keluarga dengan lorong itu.
 
 Ya, mak'e baru saja pulang shalat Ied di masjid dekat rumah. Kurang lebih 250 meter dari rumah. Persis di depan SDku.
 
-Mak'e adalah nenekku. Sebenernya sebutan mak'e bermakna ibu. Begitulah mamaku memanggil beliau. Mungkin karena aku memanggil ibuku dengan sebutan mama, makanya cucu-cucunya ikutan memanggil nenek dengan sebutan mak'e. Sebagaimana mamaku memanggilnya.
+Mak'e adalah nenekku. Sebenernya sebutan mak'e bermakna ibu. Begitulah mamaku memanggil beliau. Mungkin karena aku memanggil ibuku dengan sebutan mama, maka cucu-cucunya ikut-ikutan memanggil nenek dengan sebutan mak'e. Sebagaimana mamaku memanggilnya.
 
-Selesai cium tangan, cium pipi kanan, cium pipi kiri, sembari mengusap belek mata yang sudah mengering di ujung mata, hingga masih sulit rasanya mata ini terbuka lebar, kami cucu-cucunya diberi uang jajan hari raya oleh mak'e. Diremaslah uang itu dalam genggaman, kami bilang "suwun, Mak" (terima kasih, Mak). Selanjutnya kami melanjutkan rebahan di tempat tidur.
+Selesai cium tangan, cium pipi kanan, cium pipi kiri sambil mengusap belek di ujung mata yang sudah mengering, kami cucu-cucunya diberi uang jajan hari raya oleh mak'e. Digenggamlah uang itu, kemudian kami bilang "suwun, Mak" (terima kasih, Mak). Selanjutnya kami rebahan lagi di tempat tidur.
 
 Begitulah kira-kira rutinitas hari pertama perayaan Idulfitri di rumahku sewaktu kecil.
 
-Tahun ini, Idulfitri jatuh di hari Kamis, 13 Mei 2021. Aku merayakan Idulfitri tidak bersama keluarga. Ini adalah tahun kedua aku ga mudik di libur panjang Idulfitri. Ya karena pembatasan terkait penyebaran COVID-19.
+Tahun ini, Idulfitri jatuh di hari Kamis, 13 Mei 2021. Aku merayakan Idulfitri tidak bersama keluarga. Ini adalah tahun kedua aku ga mudik di libur panjang Idulfitri. Tak lain karena pembatasan terkait penyebaran COVID-19.
 
-Terkait surat edaran pemerintah tentang pembatasan berpergian, membuat rekan-rekan kerjaku juga banyak yang tidak mudik. Sehingga munculah agenda makan-makan di guest house komplek kantor setelah shalat Ied.
+Karena surat edaran pemerintah tentang pembatasan berpergian, rekan-rekan kerjaku juga banyak yang tidak mudik. Sehingga munculah agenda makan-makan di guest house komplek kantor setelah shalat Ied.
 
-Pagi itu aku bangun telat banget, kira-kira pukul 08.30. Karena malamnya tidur cukup larut, ngedit video ucapan selamat lebaran kantor. Melelahkan sih, tapi seru karena prosesnya yang kreatif. Nanti kalau ada kesempatan, aku ceritakan gimana prosesnya. Anyway, balik ke 08.30, aku cek hp, ada yang ngabarin ternyata orang-orang sudah pada kumpul. Aku langsung beranjak dari kasur, lalu mandi. Sesampainya di guest house, memang sudah rame banget. Orang-orang kantor juga ada yang bawa anggota keluarganya, jadi tambah rame lagi. Di meja kulihat sudah ada sambel goreng ati, semur daging, opor ayam, es agar-agar. Wah.. sarapan bermarbat nih, hahahaha.
+Pagi itu aku bangun telat banget, kira-kira pukul 08.30. Karena malamnya tidur cukup larut, ngedit video ucapan selamat lebaran kantor. Melelahkan sih, tapi seru karena prosesnya yang kreatif. Nanti kalau ada kesempatan, aku ceritakan gimana prosesnya. Anyway, balik ke 08.30. Aku cek hp, ada yang ngabarin orang-orang sudah pada kumpul. Aku langsung beranjak dari kasur, lalu mandi. Sesampainya di guest house, memang sudah rame banget. Mereka juga datang dengan anggota keluarganya, jadi tambah rame deh. Sekilas kulihat di meja sudah ada sambel goreng ati, semur daging, opor ayam, es agar-agar. Wah.. sarapan bermarbat nih, hahahaha.
 
-Tak lupa kami saling mengucapkan selamat lebaran, saling bermaaf-maafan, bercerita sana sini ngalor ngidul. Sebuah kehangatan di tengah kerelaan untuk tidak mudik di hari spesial.
+Saling mengucapkan selamat lebaran, saling bermaaf-maafan, bersenda gurau, bercerita sana sini ngalor ngidul menambah kehangatan di tengah kerelaan untuk tidak mudik di hari spesial.
 
 {{< figure src="/img/idulfitri1442h-guest-house.jpg" caption="makan-makan di guest house" >}}
 
-Setelah makan-makan di guest house, beberapa dari kami bersama kepala balai lanjut berkunjung ke beberapa rumah rekan kantor yang lokasinya tak jauh dari komplek. Dan emang keren banget lah orang Sulawesi kalau lagi lebaran. Full makanan! Kue ga seberapa, but the food is not public! (makanannya ga umum!). Ada konro, coto, ayam goreng, opor ayam, gulai ayam, soto ayam, bakso, bakso kuah coto, gulai ikan, ikan bumbu merah (apalah namanya). Emejing dah! Total sejak siang sampai malam, kami mengunjungi 5 rumah. Ga kebayang itu masing-masing rumah hidangannya TOP BGT gitu!
+Selesai acara di guest house, beberapa dari kami bersama kepala balai lanjut berkunjung ke beberapa rumah rekan kantor yang lokasinya tak jauh dari komplek. Emang keren banget lah orang Sulawesi kalau lagi lebaran. Full makanan! Kuenya ga seberapa, but the food is not public! (makanannya ga umum!). Ada konro, coto, ayam goreng, opor ayam, gulai ayam, soto ayam, bakso, bakso kuah coto, gulai ikan, ikan bumbu merah (apalah namanya). Istimiwir! Total sejak siang sampai malam, kami mengunjungi 5 rumah. Coba bayangin hidangan di masing-masing rumah yang TOP BGT!
 
 {{< figure src="/img/idulfitri1442h-ratna.jpg" caption="di rumah bu Ratna. Kombinasi pas" >}}
 
@@ -38,26 +38,26 @@ Setelah makan-makan di guest house, beberapa dari kami bersama kepala balai lanj
 
 {{< figure src="/img/idulfitri1442h-bakri.jpeg" caption="di rumah pak Bakri. Juara bakso & gulai ayam" >}}
 
-Keesokan harinya (Jumat). Rombongan yang sama lanjut berkunjung ke 4 rumah lagi. Sama seperti kemarin, hidangannya luar biasa. Ga kebayang deh.
+Keesokan harinya (Jumat). Rombongan yang sama lanjut berkunjung ke 4 rumah. Sama seperti kemarin, hidangannya luar biasa. Istimewa!
 
 {{< figure src="/img/idulfitri1442h-haris.jpg" caption="di rumah pak Haris. Soto ayam panas" >}}
 
 {{< figure src="/img/idulfitri1442h-marwati.jpg" caption="di rumah bu Marwati. Opor ayam rumah panggung" >}}
 
-{{< figure src="/img/idulfitri1442h-darwis.jpg" caption="di rumah Pak Darwis. Konro istimewa" >}}
+{{< figure src="/img/idulfitri1442h-darwis.jpg" caption="di rumah Pak Darwis. Konro bikin nambah" >}}
 
-Sore harinya, seperti ga mau rugi aja, kepala balai ngajakin main bola di lapangan kantor. Sebuah aktivitas abnormal sebenernya, hahaha. Tapi karena memang ga ada agenda, ya udah, main aja. Dan ternyata seru bangettt! Langsung deh, diagendain buat main lagi besok sore, hahahaha.
+Sore harinya, seperti ga mau rugi aja, kepala balai ngajakin main bola di lapangan kantor. Sebuah aktivitas abnormal sebenernya, hahaha. Tapi karena memang ga ada acara lain, ya udah, main aja. Eh, ternyata seru bangettt! Langsung deh, diagendain buat main lagi besok sore, hahahaha.
 
 {{< figure src="/img/idulfitri1442h-futsal.jpeg" caption="Tim futsal karbitan" >}}
 
-Sabtunya, masih ga mau rugi di hari libur, aku dan bang Nico diajak Boim ke tempat wisata alam Bantimurung. Brief info aja, tempat wisata alam Bantimurung itu salah satu wisata air terjun di Maros. Bukan air terjun yang menjulang gitu, tapi karena sudah terkelola dengan cukup baik, jadi sangat ramah buat wisata keluarga. Bisa mandi di aliran sungainya, ada goanya, kalau mau sekedar jalan-jalan liat ijo-ijo juga bisa. Air terjunnya berada di lingkungan Taman Nasional Bantimurung Bulusaraung yang terkenal dengan spesies kupu-kupunya. Jadi kupu-kupu cukup mudah ditemui di sini. Di sini juga ada museum kupu-kupu dan instalasi penangkaran kupu-kupu.
+Sabtunya, masih ga mau rugi di hari libur, aku dan bang Nico diajak Boim ke tempat wisata alam Bantimurung. Brief info aja, tempat wisata alam Bantimurung itu salah satu wisata air terjun di Maros. Bukan air terjun yang menjulang gitu, tapi kawasannya sudah terkelola dengan cukup baik, jadi sangat ramah buat wisata keluarga. Bisa mandi di aliran sungainya, ada goanya, kalau mau sekedar jalan-jalan liat ijo-ijo juga bisa. Air terjunnya berada di lingkungan Taman Nasional Bantimurung Bulusaraung yang terkenal dengan spesies kupu-kupunya. Jadi kupu-kupu cukup mudah ditemui di sini. Di sini juga ada museum kupu-kupu dan tempat penangkaran kupu-kupu.
 
 {{< youtube z0pXm9HDwNU >}}
 
 {{< figure src="/img/idulfitri1442h-bantimurung3.jpeg" caption="Danau hulu air terjun" >}}
 
-Seperti yang kami duga, rame pake bangettt orang-orang yang ngisi liburan akhir pekannya di Bantimurung. Niat semula pengen nikmati alam dengan tenang, harus digeser. Jadi niatnya adalah melihat, menikmati orang-orang yang sedang bersenang-senang. Ya, liat orang seneng juga ikut seneng jadinya. Liat orang lagi berendam, liat orang lagi main seluncuran, liat orang lagi main flying fox, liat orang lagi piknik, liat ibu lagi nyuapin anaknya, liat bapak lagi ngajarin anaknya ngambang, liat orang lagi foto-foto, liat orang lagi pacaran, hahahaha. Berbagi edorfin banget lah mereka ini.
+Dan seperti yang kami duga, rame pake bangettt orang-orang yang ngisi liburan akhir pekannya di Bantimurung. Niat semula pengen nikmati alam dengan tenang, harus digeser deh. Jadi sekarang niatnya adalah melihat, menikmati orang-orang yang sedang bersenang-senang. Liat orang seneng juga ikut seneng akhirnya. Liat orang lagi berendam, liat orang lagi main seluncuran, liat orang lagi main flying fox, liat orang lagi piknik, liat ibu lagi nyuapin anaknya, liat bapak lagi ngajarin anaknya ngambang, liat orang lagi foto-foto, liat orang lagi pacaran, hahahaha. Berbagi edorfin banget lah mereka ini.
 
 {{< youtube lQm_tpCu20o >}}
 
-Itulah sedikit cerita liburan Idulfitri 1442 H tahun ini. Kebersamaan yang sangat terasa, sangat hangat. Dukungan satu sama lain yang sangat bermakna, bahwa kamu ga sendirian, yok dinikmati bersama. Energi positifnya dapet banget. Ahh.. so blessed to have friends like them. Thanks!
+Itulah sedikit cerita liburan Idulfitri 1442 H tahun ini. Kebersamaan yang sangat terasa. Sangat hangat. Dukungan satu sama lain yang sangat bermakna, bahwa kamu ga sendirian. Yok dinikmati bersama. Energi positifnya dapet banget! Ahh.. so blessed to have friends like them. Thanks!
