--- a/content/2021-05-18.idulfitri1442h.md
+++ b/content/2021-05-18.idulfitri1442h.md
@@ -26,7 +26,7 @@ Saling mengucapkan selamat lebaran, saling bermaaf-maafan, bersenda gurau, berce
 
 {{< figure src="/img/idulfitri1442h-guest-house.jpg" caption="makan-makan di guest house" >}}
 
-Selesai acara di guest house, beberapa dari kami bersama kepala balai, pak Risman lanjut berkunjung ke beberapa rumah rekan kantor yang lokasinya tak jauh dari komplek. Emang keren banget lah orang Sulawesi kalau lagi lebaran. Full makanan! Kuenya ga seberapa, but the food is not public! (makanannya ga umum!). Ada konro, coto, ayam goreng, opor ayam, gulai ayam, soto ayam, bakso, bakso kuah coto, gulai ikan, ikan bumbu merah (apalah namanya). Istimiwir! Total sejak siang sampai malam, kami mengunjungi 5 rumah. Coba bayangin hidangan di masing-masing rumah yang TOP BGT!
+Selesai acara di guest house, beberapa dari kami bersama kepala balai lanjut berkunjung ke beberapa rumah rekan kantor yang lokasinya tak jauh dari komplek. Emang keren banget lah orang Sulawesi kalau lagi lebaran. Full makanan! Kuenya ga seberapa, but the food is not public! (makanannya ga umum!). Ada konro, coto, ayam goreng, opor ayam, gulai ayam, soto ayam, bakso, bakso kuah coto, gulai ikan, ikan bumbu merah (apalah namanya). Istimiwir! Total sejak siang sampai malam, kami mengunjungi 5 rumah. Coba bayangin hidangan di masing-masing rumah yang TOP BGT!
 
 {{< figure src="/img/idulfitri1442h-ratna.jpg" caption="di rumah bu Ratna. Kombinasi pas" >}}
 
@@ -46,7 +46,7 @@ Keesokan harinya (Jumat). Rombongan yang sama lanjut berkunjung ke 4 rumah. Sama
 
 {{< figure src="/img/idulfitri1442h-darwis.jpg" caption="di rumah Pak Darwis. Konro bikin nambah" >}}
 
-Sore harinya, seperti ga mau rugi aja, kepala balai ngajakin main bola di lapangan kantor. Sebuah aktivitas abnormal sebenernya, hahaha. Tapi karena memang ga ada acara lain, ya udah, main aja. Eh, ternyata seru bangettt! Langsung deh, diagendain buat main lagi besok sore, hahahaha.
+Sore harinya, seperti ga mau rugi aja, pak Risman ngajakin main bola di lapangan kantor. Sebuah aktivitas abnormal sebenernya, hahaha. Tapi karena memang ga ada acara lain, ya udah, main aja. Eh, ternyata seru bangettt! Langsung deh, diagendain buat main lagi besok sore, hahahaha.
 
 {{< figure src="/img/idulfitri1442h-futsal.jpeg" caption="Tim futsal karbitan" >}}
 
