--- a/content/2021-05-18.idulfitri1442h.md
+++ b/content/2021-05-18.idulfitri1442h.md
@@ -20,7 +20,7 @@ Tahun ini, Idulfitri jatuh di hari Kamis, 13 Mei 2021. Aku merayakan Idulfitri t
 
 Karena surat edaran pemerintah tentang pembatasan berpergian, rekan-rekan kerjaku juga banyak yang tidak mudik. Sehingga munculah agenda makan-makan di guest house komplek kantor setelah shalat Ied.
 
-Pagi itu aku bangun telat banget, kira-kira pukul 08.30. Karena malamnya tidur cukup larut, ngedit video ucapan selamat lebaran kantor. Melelahkan sih, tapi seru karena prosesnya yang kreatif. Nanti kalau ada kesempatan, aku ceritakan gimana prosesnya. Anyway, balik ke 08.30. Aku cek hp, Riska ngabarin orang-orang sudah pada kumpul. Aku langsung beranjak dari kasur, lalu mandi. Sesampainya di guest house, memang sudah rame banget. Mereka juga datang dengan anggota keluarganya, jadi tambah rame deh. Sekilas kulihat di meja sudah ada sambel goreng ati, semur daging, opor ayam, es agar-agar. Wah.. sarapan bermarbat nih, hahahaha.
+Pagi itu aku bangun telat banget, kira-kira pukul 08.30. Karena malamnya tidur cukup larut, ngedit video ucapan selamat lebaran kantor. Melelahkan sih, tapi seru karena prosesnya yang kreatif. Nanti kalau ada kesempatan, aku ceritakan gimana prosesnya. Anyway, balik ke 08.30. Selesai mandi, aku langsung menuju ke guest house. Sesampainya di guest house, ternyata sudah rame banget. Mereka juga datang dengan anggota keluarganya, jadi tambah rame deh. Sekilas kulihat di meja sudah ada sambel goreng ati, semur daging, opor ayam, es agar-agar. Wah.. sarapan bermarbat nih, hahahaha.
 
 Saling mengucapkan selamat lebaran, saling bermaaf-maafan, bersenda gurau, bercerita sana sini ngalor ngidul menambah kehangatan di tengah kerelaan untuk tidak mudik di hari spesial.
 
