update lirik lagu

--- a/content/2013-09-25.tentang-kamu.md
+++ b/content/2013-09-25.tentang-kamu.md
@@ -2,7 +2,7 @@
 title: "Tentang Kamu"
 date: 2013-09-25T00:00:00+07:00
 draft: false
-slug: tentang-kamu
+slug: lirik-tentang-kamu
 ---
 
 ![](/img/psychedelic-woman.jpg)
