theme update, fix tweet shortcode

--- a/content/2018-08-28.jalur-timur-siapa-aku.md
+++ b/content/2018-08-28.jalur-timur-siapa-aku.md
@@ -13,11 +13,11 @@ Saat itu dia mengabarkan bahwa ada gerakan musisi Kota Malang untuk ikut menolak
 
 Sekilas tentang revitalisasi Hutan Kota Malabar, pihak perusahaan berencana  _mempercantik_ Hutan Kota Malabar dan membangun  _Amphitheatre_  di pusat hutan. Rencana ini ditentang oleh Aliansi Masyarakat, karena dianggap akan merusak ekosistem Hutan Kota Malabar, terutama populasi Burung Gelatik Jawa yang dikhawatirkan akan bermigrasi karena kebisingan Hutan Kota. Dengan adanya revitalisasi ini, maka bukan Hutan Kota Malabar lagi namanya, tapi Taman Malabar.
 
-{{< tweet 641274504723824640 >}}
+{{< tweet user="SaveHKMalabar" id="641274504723824640" >}}
 
 Dari situ muncul berbagai tanggapan, adu argumen. Pihak yang _pro_ revitalisasi menganggap bahwa revitalisasi Hutan Kota penting, karena menurut mereka Hutan Kota kerap dijadikan sebagai tempat mesum. Sehingga perlu dilakukan penerangan dan pemolesan, agar masyarakat tidak berani berbuat hal yang diluar norma. Sampai-sampai ada demo _pro_ revitalisasi dan dibalas dengan _meme_ seperti ini:
 
-{{< tweet 640003757653102592 >}}
+{{< tweet user="SaveHKMalabar" id="640003757653102592" >}}
 
 Sontak banyak sekali dukungan musisi baik musisi Kota Malang, maupun musisi Nasional yang mendukung gerakan penolakan ini.
 
@@ -39,9 +39,9 @@ Sayang, saat konser  **“Suar Malabar”,** konser yang telah diagendakan diman
 
 Tapi tidak mengapa. Aku sudah senang dapat berkontribusi untuk pergerakan kurasa cukup monumental ini. Walaupun tidak terdokumentasi secara resmi, tetapi niatan serta rasa bangga sudah ada. Terlebih ini adalah sebuah karya! Karya itu ibarat anak hasil persetubuhanmu dengan imajinasimu.
 
-{{< tweet 637608062279270400 >}}
+{{< tweet user="MalabarProject" id="637608062279270400" >}}
 
-{{< tweet 650701049695617024 >}}
+{{< tweet user="MalabarProject" id="650701049695617024" >}}
 
 Singkat cerita, puji syukur perjuangan Aliansi Masyarakat Peduli Hutan Kota Malabar dan pergerakan musisi Kota Malang membuahkan hasil. Pihak perusahaan menghentikan pembangunan  _Amphitheatre_. Mereka hanya memberikan  _sentuhan_  pada Hutan Kota Malabar.
 
