--- a/content/2021-05-18.idul-fitri-1442h.md
+++ b/content/2021-05-18.idul-fitri-1442h.md
@@ -1,8 +1,8 @@
 ---
-title: "Idulfitri 1442 H"
+title: "Idul Fitri 1442 H"
 date: 2021-05-18T03:40:03+08:00
 draft: false
-slug: idulfitri-1442h
+slug: idul-fitri-1442h
 ---
 
 
